# aerorit-testing

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt  test.py
scripts/: plot_preview.py  plot_spectra.py  preview_patches_split.py
src/: check_aerorit.py
src/hsi/data/: aerorit.py  common.py  patches.py
src/hsi/transforms/: __init__.py  sample_coords.py
src/hsi/viz/: __init__.py  rgb.py  spectra.py
