[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi"
version = "0.1.0"
description = "Utilities for hyperspectral data loading, viz, and ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "tifffile>=2023.8.12",
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["src"]
